updated home navigation

--- a/index.html
+++ b/index.html
@@ -3,11 +3,43 @@
 <head>
     <title>CSS Tips &amp; Tricks</title>
 	<meta charset="utf-8" />
+    <style>
+
+        a{
+            margin:5%;
+            width: 10%;
+            padding:5%;
+            height: 2%;
+            font-size:2em;
+            text-align:center;
+            background: #0094ff;
+            color: #fff;
+            text-decoration:none;
+            border: 1px solid #547db9;
+            display:inline-block;
+        }
+
+    </style>
 </head>
 <body>
 
     <a href="animations" class="demo-link">CSS Key-Frame Animations</a>
 
+    <a href="cooking channel/" class="demo-link">Cooking Channel</a>
+
+    <a href="CSS3Heart/Default.html" class="demo-link">CSS Heart</a>
+
+    <a href="zebra stripe/zebra-stripe.html" class="demo-link">Zebra Stripe</a>
+
+    <a href="social links/index.html" class="demo-link">Social Links</a>
+
+    <a href="ResponsiveTables/responsive.html" class="demo-link">Responsive Tables</a>
+
+    <a href="Intro To Responsive Design/Add Responsive Navigation/index.html" class="demo-link">Responsive Navigation</a>
+
+    <a href="Intro To Responsive Design/Create A Base Fluid Layout/index.html" class="demo-link">Responsive Fluid Layout</a>
+
+    <a href="Intro To Responsive Design/Make Content Responsive/index.html" class="demo-link">Responsive Content</a>
 
 </body>
 </html>
