adding the initial HTML editor code sliding menu

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 </head>
 <body>
 
+    <a href="contenteditable" class="demo-link">Content Editable</a>
+
     <a href="animations" class="demo-link">CSS Key-Frame Animations</a>
 
     <a href="cooking channel/" class="demo-link">Cooking Channel</a>
