--- a/zebra stripe/zebra-stripe.html
+++ b/zebra stripe/zebra-stripe.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <style>
         tr:nth-child(odd) {
-            background-color: #eee;
+            background-color: cyan;
         }
     </style>
 </head>
